# ganeti-instance-guix

./: .gitignore  Makefile.am  NEWS  README  README.md  bootstrap  build.scm  common.sh.in  configure.ac  create  create-test-lvm-luks.sh  guix.scm  parameters.list  verify
.github/workflows/: test.yml
examples/: config-base.scm  dynamic-btrfs-luks.scm  dynamic-btrfs-luks.scm.in  dynamic-btrfs.scm  dynamic-btrfs.scm.in  dynamic-luks.scm  dynamic-luks.scm.in  dynamic-lvm-luks.scm  dynamic-lvm-luks.scm.in  dynamic-lvm.scm  dynamic-lvm.scm.in  dynamic.scm  dynamic.scm.in  generic.scm  hurd.scm  minimal.scm  static-ip.scm
tests/: cleanup.sh  create-btrfs-luks.sh  create-btrfs.sh  create-luks.sh  create-lvm-luks.sh  create-lvm.sh  create.sh  file-system.sh  partition.sh
